@@ -63,8 +63,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,0,5
- PRODUCTVERSION 1,0,0,5
+ FILEVERSION 2,0,6,0
+ PRODUCTVERSION 2,0,6,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -81,12 +81,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "TWAIN Working Group"
             VALUE "FileDescription", "SAMPLE Data Source"
-            VALUE "FileVersion", "1.0.0.5"
+            VALUE "FileVersion", "2.0.6.0"
             VALUE "InternalName", "TWAINDS.dll"
             VALUE "LegalCopyright", "(c) TWAIN Working Group.  All rights reserved."
             VALUE "OriginalFilename", "TWAINDS.dll"
             VALUE "ProductName", "SampleDS01"
-            VALUE "ProductVersion", "1.0.0.5"
+            VALUE "ProductVersion", "2.0.6.0"
         END
     END
     BLOCK "VarFileInfo"
